devel
-----

* Upgraded bundled jemalloc library to version 5.2.1.

* Fixed internal issue #4407: remove storage engine warning.

* Added support for TLS 1.3 for the arangod server and the client tools. 

  The default TLS protocol for the arangod server is now TLS 1.3 as well, in
  contrast to TLS 1.2 in previous versions.

  The arangod server can be started with option `--ssl.protocol 5` to make it use
  TLS 1.2 again.
  
  All client tools also support TLS 1.3, by using the `--ssl.protocol 6` option when
  invoking them. The client tools will use TLS 1.2 by default, in order to be
  compatible with older versions of ArangoDB that may be contacted by these tools.

  To configure the TLS version for arangod instances started by the ArangoDB starter,
  one can use the `--all.ssl.protocol=VALUE` startup option for the ArangoDB starter,
  where VALUE is one of the following:

  - 4 = TLSv1
  - 5 = TLSv1.2
  - 6 = TLSv1.3

* Added TransactionStatistics to ServerStatistics (transactions started /
  aborted / committed and number of intermediate commits).

* Agents to remove callback entries when responded to with code 404.

* Added AQL function DATE_ROUND to bin a date/time into a set of equal-distance
  buckets.

* Enforced the valid date range for working with date/time in AQL. The valid date
  ranges for any AQL date/time function are:

  - for string date/time values: `"0000-01-01T00:00:00.000Z"` (including) up to 
    `"9999-12-31T23:59:59.999Z"` (including)
  - for numeric date/time values: -62167219200000 (including) up to 253402300799999
    (including). These values are the numeric equivalents of 
    `"0000-01-01T00:00:00.000Z"` and `"9999-12-31T23:59:59.999Z"`.

  Any date/time values outside the given range that are passed into an AQL date
  function will make the function return `null` and trigger a warning in the query,
  which can optionally be escalated to an error and stop the query.
